--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
+
 *{
     padding: 0;
     margin: 0;
@@ -6,95 +6,53 @@
 }
 body{
     font-family: 'Fredoka One', cursive;
-    background-image: linear-gradient(180deg, dodgerblue, #267ADD);
+    background-image: linear-gradient(180deg, rgb(100, 131, 162), #2f6aa9);
 }
 
 h1{
     font-size: 92px;
-    color: #FAB201;
-    font-weight: 900;
+    color: #24c92a;
     -webkit-text-stroke: 5px white; 
+    font-weight: 900;
 }
 
-.flex{
+.square{
     display: flex;
 }
 
-.game-display{
+.display{
     justify-content: space-evenly;
-    align-items: center; 
-    height: 100vh;
     width: 100vw;
+    height: 100vh;
+    align-items: center; 
 }
 
-.container,.game-display, #result{
+.container,.display{
     flex-direction: column;
 } 
-.box{
-    height: 100px;
+
+.game{
     width: 100px;
+    height: 100px;
+    background-color: rgb(227, 214, 214);
     margin: 5px;
-    background-color: white;
-    border-radius: 10px;
     box-shadow : 2px 2px Silver ;
+    border-radius: 10px;
+    
 }
 
 p{
     text-align: center;
-    line-height: 100px;
     font-size: 60px;
-    color: white;
+    line-height: 100px;
+    color: rgb(174, 184, 204);
 }
 
-h3{
-    color: white;
-    font-size: 30px;
+h2{
+    font-size: 40px;
+    color: rgb(173, 17, 17);
+    
 }
 
-#result{
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100vh;
-    width: 100vw;
-    justify-content: center;
-    align-items: center;
-    background-color: black;
-    visibility: hidden;
-    opacity: 0.9;
-}
 
-#message{
-    font-size: 50px;
-    color: white;
-}
 
-#button{
-    padding: 10px;
-    margin-top: 30px;
-    background-color:#FAB201;
-    color: white;
-    cursor: pointer;
-    text-align: center;
-    line-height: 40px;
-    font-size: 30px;
-    opacity: 1;
-    border-radius: 5px;
-}
-
-a{
-    color: white;
-}
-
-@media (max-width:600px){
-    h1{
-        font-size: 52px;
-        -webkit-text-stroke: 2px white;
-    }
-    h3{
-        font-size: 25px;
-    }
-    #message{
-        font-size: 35px;
-    }
-}
